// Copyright 2018 the orbs-network-typescript authors
// This file is part of the orbs-network-typescript library in the Orbs project.
//
// This source code is licensed under the MIT license found in the LICENSE file in the root directory of this source tree.
// The above notice should be included in all copies or substantial portions of the software.

syntax = "proto3";

import "primitives/transactions.proto";

service Gossip {
  rpc BroadcastMessage (BroadcastMessageInput) returns (BroadcastMessageOutput);
  rpc UnicastMessage (UnicastMessageInput) returns (UnicastMessageOutput);
}

message BroadcastMessageInput {
  string broadcastGroup = 1;
  string messageType = 2;
  bytes buffer = 3;
  bool immediate = 4;
}

message BroadcastMessageOutput {
  // empty
}

message UnicastMessageInput {
  string recipient = 1;
  string broadcastGroup = 2;
  string messageType = 3;
  bytes buffer = 4;
  bool immediate = 5;
}
message UnicastMessageOutput {
  // empty
}
